<resources>
    <string name="app_name">PopLibs</string>


    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="btn_text">0</string>
    <string name="read_btn">Выбрать изображение</string>
    <string name="selected_image">Выбранное изображение</string>
    <string name="start_convert_btn">Конвертировать в .png</string>
    <string name="image_view_avatar_user">Аватор пользователя</string>
    <string name="user_login">Логин пользователя</string>
    <string name="user_name">ФИО</string>
    <string name="repository_name">Наименование репозитория</string>
    <string name="repository_description">Описание репозитория</string>
    <string name="forks_count">Количество форков</string>

</resources>