<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true"
        android:text="@string/selected_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_picture" />


    <Button
        android:id="@+id/start_converting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_convert_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <ImageView
        android:id="@+id/converted_image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true"
        android:text="@string/selected_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_converting" />

</androidx.constraintlayout.widget.ConstraintLayout>